unpackaged/main/default/objects/aXcessa_Store_Metric__b/aXcessa_Store_Metric__b.object-meta.xml
<CustomObject>
    <label>aXcessa Store Metric</label>
    <pluralLabel>aXcessa Store Metrics</pluralLabel>
</CustomObject>