unpackaged/main/default/objects/aXcessa_Store_Metric__b/fields/aXcessa_Store__c.field-meta.xml
<CustomField>
    <fullName>aXcessa_Store__c</fullName>
    <label>aXcessa Store</label>
    <referenceTo>axcessa_Platform_Engagement__c</referenceTo>
    <relationshipLabel>aXcessa Store Metrics</relationshipLabel>
    <relationshipName>aXcessa_Store_Metrics</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>