unpackaged/main/default/objects/aXcessa_Store_Metric__b/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <label>CIF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>