unpackaged/main/default/objects/aXcessa_Store_Metric__b/fields/Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Date__c</fullName>
    <label>Data Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>