unpackaged/main/default/objects/aXcessa_Store_Metric__b/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <length>8</length>
    <type>Text</type>
</CustomField>