unpackaged/main/default/objects/aXcessa_Store_Metric__b/fields/Installed__c.field-meta.xml
<CustomField>
    <fullName>Installed__c</fullName>
    <label>Installed?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>