unpackaged/main/default/objects/aXcessa_Store_Metric__b/fields/NCM__c.field-meta.xml
<CustomField>
    <fullName>NCM__c</fullName>
    <label>NCM?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>