unpackaged/main/default/objects/aXcessa_Store_Metric__b/fields/Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Store_Id__c</fullName>
    <label>Store Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>