unpackaged/main/default/objects/aXcessa_Store_Metric__b/fields/Users_Count__c.field-meta.xml
<CustomField>
    <fullName>Users_Count__c</fullName>
    <label>Users Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>